@@ -27,7 +27,7 @@ bottom.
         things = server.view('open-things-due', include_docs=True,
             descending=True)
         things = [t for t in things if t.due >= daystart]
-        display.display_things(things, due=True)
+        display.Displayer().display_things(things, due=True)
 
 class Open(logcommand.LogCommand):
     summary = "list all open things, ordered by priority (?)."
@@ -36,7 +36,8 @@ class Open(logcommand.LogCommand):
         server = couch.Server()
 
         # FIXME: make the view calculate and sort by priority
-        display.display_things(server.view('open-things', include_docs=True))
+        display.Displayer().display_things(server.view(
+            'open-things', include_docs=True))
 
 class Overdue(logcommand.LogCommand):
     summary = "list all overdue open things, reverse-ordered by due date."
@@ -57,7 +58,7 @@ bottom.
         dayend = daystart + datetime.timedelta(days=1)
         things = server.view('open-things-due', include_docs=True)
         things = [t for t in things if t.due < dayend]
-        display.display_things(things, due=True)
+        display.Displayer().display_things(things, due=True)
 
 class Priority(logcommand.LogCommand):
     summary = "list all open things, ordered by priority."
@@ -74,7 +75,7 @@ class Priority(logcommand.LogCommand):
             kwargs['limit'] = count
         result = server.view(view, include_docs=True, **kwargs)
 
-        display.display_things(result)
+        display.Displayer().display_things(result)
 
 
 class Today(logcommand.LogCommand):
@@ -90,7 +91,7 @@ class Today(logcommand.LogCommand):
         dayend = daystart + datetime.timedelta(days=1)
         things = server.view('open-things-due', include_docs=True)
         things = [t for t in things if daystart <= t.due < dayend]
-        display.display_things(things, due=True)
+        display.Displayer().display_things(things, due=True)
 
 
 
